<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary_color"
    tools:context=".ProfileActivity">

    <ImageView
        android:id="@+id/profile"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@mipmap/ic_profile_foreground"
        app:layout_constraintBottom_toTopOf="@id/nama"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/nama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/name"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/nim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nama"
        android:text="@string/nim"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/kelas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nim"
        android:text="@string/classOf"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/reference"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/kelas"
        android:text="@string/reference"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/reference_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reference"
        android:text="@string/reference_1"
        android:textSize="16sp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:autoLink="web"
        android:singleLine="true" />

    <TextView
        android:id="@+id/reference_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reference_1"
        android:text="@string/reference_2"
        android:textSize="16sp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:autoLink="web"
        android:singleLine="true" />

    <TextView
        android:id="@+id/reference_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reference_2"
        android:text="@string/reference_3"
        android:textSize="16sp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:autoLink="web"
        android:singleLine="true" />

    <TextView
        android:id="@+id/reference_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reference_3"
        android:text="@string/reference_4"
        android:textSize="16sp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:autoLink="web"
        android:singleLine="true" />

    <TextView
        android:id="@+id/reference_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reference_4"
        android:text="@string/reference_5"
        android:textSize="16sp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:autoLink="web"
        android:singleLine="true" />


</androidx.constraintlayout.widget.ConstraintLayout>