<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mContainer"
    android:background="@drawable/main_bg"
    android:orientation="vertical"
    tools:context=".PlayerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/layout_top_btn"
        android:background="@drawable/gradient_bg"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/nowPlaying"
            android:textColor="@color/white"
            android:gravity="center_horizontal"
            android:background="@android:color/transparent"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_weight="8"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/cover_art"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/pp"
            tools:ignore="ContentDescription" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:id="@+id/imageViewGradient"
            android:src="@drawable/gradient_bg"
            tools:ignore="ContentDescription" />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/songName"
        android:id="@+id/song_name"
        android:textColor="@color/white"
        android:gravity="center_horizontal"
        android:textSize="22sp"
        android:textStyle="bold"
        android:ellipsize="marquee"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:singleLine="true"
        android:marqueeRepeatLimit="marquee_forever"
        android:scrollHorizontally="true"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/songArtist"
        android:id="@+id/song_artist"
        android:textColor="@color/white"
        android:gravity="center_horizontal"
        android:textSize="18sp"
        android:ellipsize="marquee"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:singleLine="true"
        android:marqueeRepeatLimit="marquee_forever"
        android:scrollHorizontally="true"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="15dp"
        android:id="@+id/seek_bar_layout"
        android:gravity="center">
        <TextView
            android:gravity="top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/durationPlayed"
            android:id="@+id/durationPlayed"
            android:textColor="@color/white"
            android:layout_marginStart="10dp"
            android:layout_weight="3"/>

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="10000000" />

        <TextView
            android:id="@+id/durationTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="3"
            android:text="@string/durationTotal"
            android:textColor="@color/white" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/layout_for_bottom"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center|bottom"
        android:background="@drawable/gradient_bg"
        android:gravity="center">


        <ImageView
            android:id="@+id/id_prev"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:src="@drawable/ic_skip_prev"
            tools:ignore="ContentDescription" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/play_pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_play_arrow"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/id_next"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:src="@drawable/ic_skip_next"
            tools:ignore="ContentDescription" />

    </LinearLayout>



</LinearLayout>